# turbo-with-python-uv

./: .gitignore  README.md  package.json  pyproject.toml  turbo.json
apps/python-app/: package.json  pyproject.toml
apps/python-app/src/python_app/: __init__.py  main.py
apps/python-app2/: main.py  package.json  pyproject.toml
